--- a/src/main/resources/de/greluc/sc/sckillmonitor/StartView.fxml
+++ b/src/main/resources/de/greluc/sc/sckillmonitor/StartView.fxml
@@ -39,7 +39,8 @@
      </columnConstraints>
      <rowConstraints>
       <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -48,29 +49,34 @@
       <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
      </rowConstraints>
      <Label fx:id="welcomeText" text="Welcome to SC Kill Monitor!" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-     <Button onAction="#onStartButtonClicked" text="Start" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-   <Label text="Select Channel:" GridPane.columnIndex="1" GridPane.rowIndex="2">
+     <Button onAction="#onStartButtonClicked" text="Start" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+   <Label text="Select Channel:" GridPane.columnIndex="1" GridPane.rowIndex="3">
       <GridPane.margin>
          <Insets right="10.0" />
       </GridPane.margin>
    </Label>
-   <ComboBox fx:id="channelSelection" onAction="#onChannelSelection" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-   <Label text="Selected Path:" GridPane.columnIndex="1" GridPane.rowIndex="3">
+   <ComboBox fx:id="channelSelection" onAction="#onChannelSelection" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+   <Label text="Selected Path:" GridPane.columnIndex="1" GridPane.rowIndex="4">
       <GridPane.margin>
          <Insets right="10.0" />
       </GridPane.margin>
    </Label>
-   <Label fx:id="selectedPathValue" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
-   <Label text="Set Handle:" GridPane.columnIndex="1" GridPane.rowIndex="4">
+   <Label fx:id="selectedPathValue" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
+   <Label text="Set Handle:" GridPane.columnIndex="1" GridPane.rowIndex="5">
       <GridPane.margin>
          <Insets right="10.0" />
       </GridPane.margin>
    </Label>
-   <TextField fx:id="inputHandle" promptText="SC Player Handle" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-   <Label text="Set Scan Intervall (s):" GridPane.columnIndex="1" GridPane.rowIndex="5">
+   <TextField fx:id="inputHandle" promptText="SC Player Handle" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+   <Label text="Set Scan Intervall (s):" GridPane.columnIndex="1" GridPane.rowIndex="6">
       <GridPane.margin>
          <Insets right="10.0" />
       </GridPane.margin>
    </Label>
-   <TextField fx:id="inputInterval" promptText="Time in Seconds" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+   <TextField fx:id="inputInterval" promptText="Time in Seconds" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+   <Label text="Disclaimer: The player names determined with the ‘SC Kill Monitor’ app may not be used for purposes that violate the Star Citizen Terms and Conditions. The log may only be used to report griefing incidents and/or stream sniping." wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" GridPane.valignment="TOP">
+      <GridPane.margin>
+         <Insets top="10.0" />
+      </GridPane.margin>
+   </Label>
  </GridPane>
