A few changes to the styling and spacing
- Button: Start -> Start Kill logging
- Button: Stop -> Stop Kill logging
- Increased spacing between buttons and GUI elements
- Disclaimer text changed

--- a/src/main/resources/de/greluc/sc/sckillmonitor/ScanView.fxml
+++ b/src/main/resources/de/greluc/sc/sckillmonitor/ScanView.fxml
@@ -27,7 +27,6 @@
   ~ along with SC Kill Monitor. If not, see <http://www.gnu.org/licenses/>.                       ~
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-
 <GridPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.greluc.sc.sckillmonitor.controller.ScanViewController">
    <columnConstraints>
       <ColumnConstraints hgrow="NEVER" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
@@ -35,6 +34,7 @@
    </columnConstraints>
    <rowConstraints>
       <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
+      <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
       <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
       <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
    </rowConstraints>
@@ -44,6 +44,6 @@
             <VBox fx:id="textPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" />
          </content>
       </ScrollPane>
-      <Button mnemonicParsing="false" onAction="#onStopPressed" text="Stop" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" onAction="#onStopPressed" style="-fx-background-color: #a0000f;" text="Stop Kill logging" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2" />
    </children>
 </GridPane>
