--- a/src/main/resources/de/greluc/sc/sckillmonitor/StartView.fxml
+++ b/src/main/resources/de/greluc/sc/sckillmonitor/StartView.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   ~ SC Kill Monitor                                                                               ~
@@ -41,40 +42,45 @@
       <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="NEVER" />
+         <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="NEVER" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="NEVER" />
       <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="NEVER" />
      </rowConstraints>
-     <Label fx:id="welcomeText" text="Welcome to SC Kill Monitor!" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-     <Button onAction="#onStartButtonClicked" text="Start" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-   <Label text="Select Channel:" GridPane.columnIndex="1" GridPane.rowIndex="3">
+     <Label fx:id="welcomeText" text="SC Kill Monitor" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font></Label>
+     <Button onAction="#onStartButtonClicked" style="-fx-background-color: #00766b;" text="Start Kill logging" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+   <Label text="Select Channel:" GridPane.columnIndex="1" GridPane.rowIndex="4">
       <GridPane.margin>
          <Insets right="10.0" />
       </GridPane.margin>
    </Label>
-   <ComboBox fx:id="channelSelection" onAction="#onChannelSelection" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-   <Label text="Selected Path:" GridPane.columnIndex="1" GridPane.rowIndex="4">
+   <ComboBox fx:id="channelSelection" onAction="#onChannelSelection" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+   <Label text="Selected Path:" GridPane.columnIndex="1" GridPane.rowIndex="5">
       <GridPane.margin>
          <Insets right="10.0" />
       </GridPane.margin>
    </Label>
-   <Label fx:id="selectedPathValue" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
-   <Label text="Set Handle:" GridPane.columnIndex="1" GridPane.rowIndex="5">
+   <Label fx:id="selectedPathValue" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
+   <Label text="Set Handle:" GridPane.columnIndex="1" GridPane.rowIndex="6">
       <GridPane.margin>
          <Insets right="10.0" />
       </GridPane.margin>
    </Label>
-   <TextField fx:id="inputHandle" promptText="SC Player Handle (required)" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-   <Label text="Set Scan Intervall (s):" GridPane.columnIndex="1" GridPane.rowIndex="6">
+   <TextField fx:id="inputHandle" promptText="SC Player Handle (required)" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+   <Label text="Set Scan Intervall (s):" GridPane.columnIndex="1" GridPane.rowIndex="7">
       <GridPane.margin>
          <Insets right="10.0" />
       </GridPane.margin>
    </Label>
-   <TextField fx:id="inputInterval" promptText="Time in Seconds (required)" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-   <Label text="Disclaimer: The player names determined with the SC Kill Monitor app may not be used for purposes that violate the Star Citizen Terms and Conditions. The log may only be used to report griefing incidents and/or stream sniping." wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" GridPane.valignment="TOP">
+   <TextField fx:id="inputInterval" promptText="Time in Seconds (required)" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+   <Label text="Disclaimer: The SC Kill Monitor app may only be used to report potential griefings or stream snipings. Use of the identified player names for purposes that violate the Star Citizen Terms and Conditions is prohibited. The responsibility for compliant use lies with the user. This application is fan made and is not officially affiliated with Cloud Imperium Games." wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" GridPane.valignment="TOP">
       <GridPane.margin>
          <Insets top="10.0" />
       </GridPane.margin>
