Rename "File" menu to "Options" in MainView.
Update the main menu label for better clarity and alignment with its contents. This change improves UI terminology consistency and enhances user experience.

Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@pm.me>

--- a/src/main/resources/de/greluc/sc/sckm/fxml/MainView.fxml
+++ b/src/main/resources/de/greluc/sc/sckm/fxml/MainView.fxml
@@ -36,7 +36,7 @@
          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
      </rowConstraints>
     <MenuBar GridPane.columnSpan="2147483647">
-        <Menu mnemonicParsing="false" text="File">
+        <Menu mnemonicParsing="false" text="Options">
             <MenuItem mnemonicParsing="false" onAction="#onSettingsPressed" text="Settings" />
             <MenuItem mnemonicParsing="false" onAction="#onClosePressed" text="Close" />
         </Menu>
