Fix trailing slash in GNU license URL.
Ensure consistency by removing the trailing slash in the GNU license URL across all file headers. This improves standardization and avoids potential inconsistencies in references.

Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@pm.me>

--- a/src/main/resources/de/greluc/sc/sckm/fxml/StartView.fxml
+++ b/src/main/resources/de/greluc/sc/sckm/fxml/StartView.fxml
@@ -21,7 +21,7 @@
   ~ GNU General Public License for more details.                                                  ~
   ~                                                                                               ~
   ~ You should have received a copy of the GNU General Public License                             ~
-  ~ along with SC Kill Monitor. If not, see <https://www.gnu.org/licenses/>.                      ~
+  ~ along with SC Kill Monitor. If not, see https://www.gnu.org/licenses/                         ~
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
 <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.greluc.sc.sckm.controller.StartViewController">
