--- a/src/main/resources/de/greluc/sc/sckm/fxml/SettingsView.fxml
+++ b/src/main/resources/de/greluc/sc/sckm/fxml/SettingsView.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -60,34 +62,76 @@
     <TextField fx:id="inputPathTechPreview" onMouseClicked="#onTechPreviewClicked" GridPane.columnIndex="2" GridPane.rowIndex="5" />
     <Label text="Path to Custom Log:" GridPane.columnIndex="1" GridPane.rowIndex="6" />
     <TextField fx:id="inputPathCustom" onMouseClicked="#onCustomClicked" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-   <Button mnemonicParsing="false" onAction="#onLiveClear" text="Clear" GridPane.columnIndex="3" GridPane.rowIndex="1">
+   <Button mnemonicParsing="false" onAction="#onLiveClear" GridPane.columnIndex="3" GridPane.rowIndex="1">
       <GridPane.margin>
          <Insets left="5.0" />
       </GridPane.margin>
+      <graphic>
+         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../icons/outline/xbox-x.png" />
+            </image>
+         </ImageView>
+      </graphic>
    </Button>
-   <Button mnemonicParsing="false" onAction="#onPtuClear" text="Clear" GridPane.columnIndex="3" GridPane.rowIndex="2">
+   <Button mnemonicParsing="false" onAction="#onPtuClear" GridPane.columnIndex="3" GridPane.rowIndex="2">
       <GridPane.margin>
          <Insets left="5.0" />
       </GridPane.margin>
+      <graphic>
+         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../icons/outline/xbox-x.png" />
+            </image>
+         </ImageView>
+      </graphic>
    </Button>
-   <Button mnemonicParsing="false" onAction="#onEptuClear" text="Clear" GridPane.columnIndex="3" GridPane.rowIndex="3">
+   <Button mnemonicParsing="false" onAction="#onEptuClear" GridPane.columnIndex="3" GridPane.rowIndex="3">
       <GridPane.margin>
          <Insets left="5.0" />
       </GridPane.margin>
+      <graphic>
+         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../icons/outline/xbox-x.png" />
+            </image>
+         </ImageView>
+      </graphic>
    </Button>
-   <Button mnemonicParsing="false" onAction="#onHotfixClear" text="Clear" GridPane.columnIndex="3" GridPane.rowIndex="4">
+   <Button mnemonicParsing="false" onAction="#onHotfixClear" GridPane.columnIndex="3" GridPane.rowIndex="4">
       <GridPane.margin>
          <Insets left="5.0" />
       </GridPane.margin>
+      <graphic>
+         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../icons/outline/xbox-x.png" />
+            </image>
+         </ImageView>
+      </graphic>
    </Button>
-   <Button mnemonicParsing="false" onAction="#onTechPreviewClear" text="Clear" GridPane.columnIndex="3" GridPane.rowIndex="5">
+   <Button mnemonicParsing="false" onAction="#onTechPreviewClear" GridPane.columnIndex="3" GridPane.rowIndex="5">
       <GridPane.margin>
          <Insets left="5.0" />
       </GridPane.margin>
+      <graphic>
+         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../icons/outline/xbox-x.png" />
+            </image>
+         </ImageView>
+      </graphic>
    </Button>
-   <Button mnemonicParsing="false" onAction="#onCustomClear" text="Clear" GridPane.columnIndex="3" GridPane.rowIndex="6">
+   <Button mnemonicParsing="false" onAction="#onCustomClear" GridPane.columnIndex="3" GridPane.rowIndex="6">
       <GridPane.margin>
          <Insets left="5.0" />
       </GridPane.margin>
+      <graphic>
+         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../icons/outline/xbox-x.png" />
+            </image>
+         </ImageView>
+      </graphic>
    </Button>
 </GridPane>
